--- a/auth/package.json
+++ b/auth/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^5.0.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "mongoose": "^8.12.1",
     "typescript": "^5.8.2"
   }
 }
