--- a/auth/package.json
+++ b/auth/package.json
@@ -17,6 +17,7 @@
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "axios": "^1.8.3",
     "cookie-session": "^2.1.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
