--- a/auth/package.json
+++ b/auth/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ts-node-dev sec/index.ts -no-cashe",
     "dev": "node --watch --env-file=.env src/index.ts",
     "start": "node --watch --env-file=.env src/index.ts",
     "build": "tsc"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["./src/test/setup.ts"]
   },
   "keywords": [],
   "author": "",
@@ -24,5 +29,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
+    "i": "^0.3.7",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "npm": "^11.2.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6"
   }
 }
