--- a/auth/package.json
+++ b/auth/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "ts-node-dev sec/index.ts -no-cashe",
-    "dev": "node --watch --env-file=.env src/index.ts",
-    "start": "node --watch --env-file=.env src/index.ts",
+    "test": "jest --watchAll --no-cache",
+    "start": "ts-node-dev --env-file=.env src/index.ts",
+    "dev": "node --env-file=.env --loader ts-node/esm src/index.ts",
     "build": "tsc"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["./src/test/setup.ts"]
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
