--- a/auth/package.json
+++ b/auth/package.json
@@ -24,6 +24,8 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.8.3",
+    "cookie-parser": "^1.4.7",
+    "@types/cookie-parser": "^1.4.8",
     "cookie-session": "^2.1.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
