--- a/auth/package.json
+++ b/auth/package.json
@@ -20,13 +20,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emil_tickets/common": "^1.0.1",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.8.3",
     "cookie-parser": "^1.4.7",
-    "@types/cookie-parser": "^1.4.8",
-    "cookie-session": "^2.1.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
