--- a/tickets/package.json
+++ b/tickets/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "auth",
+  "name": "tickets",
   "version": "1.0.0",
   "description": "",
+  "license": "ISC",
+  "author": "Emil",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --no-cache",
@@ -16,20 +18,14 @@
       "./src/test/setup.ts"
     ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@emil_tickets/common": "^1.0.1",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.9",
-    "axios": "^1.8.3",
+    "@types/express": "^5.0.1",
+    "axios": "^1.8.4",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.12.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
@@ -38,7 +34,7 @@
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.2.6"
   }
 }
