--- a/tickets/package.json
+++ b/tickets/package.json
@@ -19,12 +19,13 @@
     ]
   },
   "dependencies": {
-    "@emil_tickets/common": "^1.0.1",
+    "@emil_tickets/common": "^1.0.3",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
     "axios": "^1.8.4",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
