--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -15,6 +15,11 @@ spec:
       containers:
         - name: tickets
           image: emildomagalaa/tickets
+          env:
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
 
 ---
 apiVersion: v1
