--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "auth",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
+  "license": "ISC",
+  "author": "Emil",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --no-cache",
@@ -16,28 +18,17 @@
       "./src/test/setup.ts"
     ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@emil_tickets/common": "^1.0.3",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.9",
-    "cookie-parser": "^1.4.7",
-    "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "@emil_tickets/common": "^1.0.14",
+    "@types/bull": "^3.15.9",
+    "bull": "^4.16.5",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.1.4",
-    "supertest": "^7.0.0",
     "ts-jest": "^29.2.6"
   }
 }
