--- a/payments/package.json
+++ b/payments/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.12.2",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^18.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
